<resources>
    <string name="app_name">课程表</string>
    <string name="camera_permission_not_granted">请开启相机权限再进行拍照</string>
    <string name="camera_permission_confirmation">需要相机权限</string>
    <string name="error_camera_permission">请求相机权限出错</string>
    <string name="tess_ceshi">签到效果</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="phone_hint">手机</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登陆</string>
    <string name="qiandao">签到</string>
    <string name="add_courceschedule">编辑课程</string>
    <string name="register">注册</string>
    <string name="title_activity_coure_schedule">课程表</string>
    <string name="login_courceschedule">登录获取课程表</string>
    <string name="select_image">选取图片</string>
</resources>
